# vamr-2024

./: .gitignore  README.md
exercise_01/matlab_code/: distortPoints.m  main.m  poseVectorToTransformationMatrix.m  projectPoints.m  undistortImage.m  undistortImageVectorized.m
exercise_01/python_code/: distort_points.py  main.py  main_cube.py  project_points.py  undistort_image.py  undistort_image_vectorized.py
exercise_02/python_code/: main.py  reproject_points.py
src/exercise_01/: CMakeLists.txt  package.xml
src/exercise_01/include/: exercise_01_helper.hpp  vamr_utils.hpp
src/exercise_01/python_code/: distort_points.py  pose_vector_to_transformation_matrix.py  undistort_image_vectorized.py
src/exercise_01/src/: exercise_01_helper.cpp  main.cpp  vamr_utils.cpp
src/exercise_02/python_code/: estimate_pose_dlt.py  main.py  reproject_points.py
src/exercise_03/python_code/: describe_keypoints.py  harris.py  main.py  match_descriptors.py  select_keypoints.py  shi_tomasi.py
src/exercise_04/matlab_code/: computeBlurredImages.m  computeDoGs.m  computeImagePyramid.m  main.m
src/exercise_05/matlab_code/: disparityToPointCloud.m  getDisparity.m  main.m
src/exercise_07/matlab_code/: main.m  parabolaRansac.m  ransacLocalization.m
src/exercise_07/python_code/: main.py  parabolaRansac.py  ransacLocalization.py
src/exercise_08/python_code/: alignEstimateToGroundTruth.py  runBA.py
src/exercise_09/matlab_code/: getSimWarp.m  getWarpedPatch.m  warpImage.m
src/exercise_09/python_code/: get_sim_warp.py  get_warped_patch.py  track_brute_force.py  track_klt.py  (+2 more)
(+1 files in other folders)
